continuando con documentacion de modulo category y corrigiendo endpoint de actualizar una subcategoria simplificando su complejidad innesesaria
